--- a/data/releases.json
+++ b/data/releases.json
@@ -4,15 +4,17 @@
       "version": "v1.0.0",
       "date": "2025-10-12",
       "notes": "Initial stable release of Predecessor menu base with HUD FX and loader integration.",
-      "url": "https://github.com/SoundlessEcho/Download-Page/raw/main/Call%20of%20Duty/BO3/GSC%20Menu%20Zombie%20Steam%20And%20PS4.zip",
-      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw"
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.0/Predecessor-v1.0.0.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Steam", "PC"]
     },
     {
       "version": "v1.0.1-beta",
       "date": "2025-10-19",
       "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
       "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
-      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw"
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
     }
   ]
 }
