--- a/data/releases.json
+++ b/data/releases.json
@@ -6,7 +6,7 @@
       "notes": "Predecessor GSC mod menu for BO3 zombies.",
       "url": "https://github.com/SoundlessEcho/Download-Page/raw/main/Call%20of%20Duty/BO3/GSC%20Menu%20Zombie%20Steam%20And%20PS4.zip",
       "video": "https://www.youtube.com/watch?v=ehjO6XsgLu0",
-      "platforms": ["Steam", "PS4"]
+      "platforms": ["Steam", "Modded PS4"]
     },
     {
       "version": "v1.0.1-beta",
