--- a/data/releases.json
+++ b/data/releases.json
@@ -31,6 +31,350 @@
       "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
       "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
       "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
+    },
+    {
+      "version": "v1.0.1-beta",
+      "date": "2025-10-19",
+      "notes": "Beta: decoder-style text animation improvements, slider fixes, and docs updates.",
+      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
+      "platforms": ["Xbox", "PlayStation", "Epic Store", "PC"]
     }
   ]
 }
